1 June 2011: Wouter
	- mmap used for parent-xfrd communication of tasks and task results.
	  SIGHUP is sent to xfrd so it can become a task in the normal
	  workflow. This can process about 4500 zones per second (this was
	  with lots of debug prints per zone, in debug compile). The mmaps
	  are file-backed with /tmp/ files.  They are removed on a clean exit.

30 May 2011: Wouter
	- Fix Makefile for U in environment, since wrong U is more common than
	  deansification necessity.

27 May 2011: Wouter
	- xfrd is forked before the database is read in, thus it does not
	  consume the memory of the database.  It can be reforked on a crash,
	  which is like the current case.  Difffile is cleaned by main process
	  and the soa serials are all sent via pipe instead of via forkmem.

24 May 2011: Wouter
	- implemented patterns in the nsd.conf file.
	  they can be instantiated with include-pattern: x.
	  existing zone definitions keep working (backwards compatible), such
	  zones really have an implicit pattern and cannot_delete flag set.
	- work on zonelist read and storage.

20 May 2011: Wouter
	- from NSD_3_2 branch the fix: bug if the zonefile is changed for a
	secondary but stored transfers are applied, and stop ixfr to empty.
	The zone is flagged with error, and the good zone is still in nsd.db
	for NSD4.

17 May 2011: Wouter
	- unit test for code coverage on nsec3 ixfr.
	- tag 4.0.0-imp3 created
	- trunk is 4.0.0-imp4 under development.

13 May 2011: Matthijs
	- Fix bug #381 - Binary escaped and transfers.

13 May 2011: Wouter
	- Unit test nsec3 salt change and fix for sanity check of nsec3 chain.
	  pretty prints the nsec3 parameters if verbose.

12 May 2011: Wouter
	- more unit test for nsec3 precompile changes.
	- unit test for salt change, rehash in udb fix, remove last NSEC3
	  from chain works, NSEC3PARAM RR fixed up if RR added or removed
	  from NSEC3PARAM RRset, hashtrees cleared properly, precompile clear
	  more thorough (not dependant on nsec3_conditions).
